objects/ASI_eForm_IT_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_CIO_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_CN_Change_Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Authorizer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ASI_eForm_Indicator__c</field>
                <operation>contains</operation>
                <value>&apos;CN Change Authorizer&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ITC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_CN_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Change_Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Authorizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Change_Category__c</fullName>
        <label>Change Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Change_Request_No__c</fullName>
        <label>Change Request No.</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_eForm_Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Cost_of_Enhancement__c</fullName>
        <label>Cost of Enhancement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Date_Needed__c</fullName>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Emergency_Change_Permanent__c</fullName>
        <label>Emergency Change Permanent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Change_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Not Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_FCost_absorbed_by_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost absorb by Affiliate Local IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Further_Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Further Authorizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_High_Level_Authorizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High-Level Authorizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>IT Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                    <default>true</default>
                    <label>Work In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OwnerId , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preview Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Problem_Ticket_No__c</fullName>
        <inlineHelpText>If Emergency, please indicate the problem ticket no.</inlineHelpText>
        <label>Problem Ticket No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Project_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Project_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Implementer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ASI_eForm_Indicator__c</field>
                <operation>contains</operation>
                <value>&apos;Project Implementer&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ITC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Submit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_resubmit__c</fullName>
        <label>Sys_resubmit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>IT Change Request</label>
    <listViews>
        <fullName>ASI_eForm_All_CN_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Change_Request_No__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Project_Name__c</columns>
        <columns>ASI_eForm_Company__c</columns>
        <columns>ASI_eForm_Project_Implementer__c</columns>
        <columns>ASI_eForm_Change_Category__c</columns>
        <columns>ASI_eForm_Change_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request,ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request_Final</value>
        </filters>
        <label>All CN Change Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_All_IT_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Change_Request_No__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Project_Name__c</columns>
        <columns>ASI_eForm_Company__c</columns>
        <columns>ASI_eForm_Project_Implementer__c</columns>
        <columns>ASI_eForm_Change_Category__c</columns>
        <columns>ASI_eForm_Change_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_eForm_Date_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_Date_Needed__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>ASI_eForm_Date_Needed__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2020</value>
        </filters>
        <label>All IT Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_My_IT_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Change_Request_No__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Change_Category__c</columns>
        <columns>ASI_eForm_Change_Type__c</columns>
        <columns>ASI_eForm_Project_Name__c</columns>
        <columns>ASI_eForm_Project_Implementer__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_eForm_Change_Authorizer__c</columns>
        <columns>ASI_eForm_CN_Change_Authorizer__c</columns>
        <filterScope>Mine</filterScope>
        <label>My IT Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_Change_Requests1</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Change_Request_No__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Project_Name__c</columns>
        <columns>ASI_eForm_Company__c</columns>
        <columns>ASI_eForm_Project_Implementer__c</columns>
        <columns>ASI_eForm_Change_Category__c</columns>
        <columns>ASI_eForm_Change_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request,ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request_Final</value>
        </filters>
        <filters>
            <field>ASI_eForm_Change_Request_No__c</field>
            <operation>equals</operation>
            <value>ITCRF-0004523</value>
        </filters>
        <label>All CN Change Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_CN_Change_Requests</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_eForm_Change_Request_No__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Project_Name__c</columns>
        <columns>ASI_eForm_Company__c</columns>
        <columns>ASI_eForm_Project_Implementer__c</columns>
        <columns>ASI_eForm_Change_Category__c</columns>
        <columns>ASI_eForm_Change_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request,ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request_Final</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_IT_Change_Request__c.ASI_eForm_CN_IT_Change_Request_Submitted</value>
        </filters>
        <label>My CN Change Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ITCRF-{0000000}</displayFormat>
        <label>Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Change Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_CN_IT_Change_Request</fullName>
        <active>true</active>
        <label>IT Change Request (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_IT_Change_Request_Final</fullName>
        <active>true</active>
        <label>IT Change Request Final (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_IT_Change_Request_Submitted</fullName>
        <active>true</active>
        <label>IT Change Request Submitted (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_IT_Change_Request</fullName>
        <active>true</active>
        <label>IT Change Request (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_IT_Change_Request_Final</fullName>
        <active>true</active>
        <label>IT Change Request Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_IT_Change_Request_Submitted</fullName>
        <active>true</active>
        <label>IT Change Request Submitted (HK)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_eForm_IT_Change_Manager_Access__c</fullName>
        <label>ASI eForm IT Change Manager Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_eForm_Further_Authorizer_Required</fullName>
        <active>true</active>
        <description>(Change Category is High) OR (Change Category is Medium but Change Type is Emergency)</description>
        <errorConditionFormula>AND( OR(ISBLANK( ASI_eForm_High_Level_Authorizer__c ),ISBLANK(  ASI_eForm_Further_Authorizer__c )) ,OR( ISPICKVAL( ASI_eForm_Change_Category__c , &quot;High&quot;) , AND(ISPICKVAL( ASI_eForm_Change_Category__c , &quot;Medium&quot;),ISPICKVAL( ASI_eForm_Change_Type__c , &quot;Emergency&quot;))))</errorConditionFormula>
        <errorMessage>Both High-Level Authorizer and Further Authorizer are required to this form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_High_Authorizer_Required</fullName>
        <active>true</active>
        <description>(Change Category is Medium) OR (Change Category is Low but Change Type is Emergency)</description>
        <errorConditionFormula>AND( ISBLANK( ASI_eForm_High_Level_Authorizer__c ) ,OR( AND( ISPICKVAL( ASI_eForm_Change_Category__c , &quot;Medium&quot;) ,!ISPICKVAL(  ASI_eForm_Change_Type__c  , &quot;Emergency&quot;)) , AND(ISPICKVAL( ASI_eForm_Change_Category__c , &quot;Low&quot;),ISPICKVAL(  ASI_eForm_Change_Type__c  , &quot;Emergency&quot;))))</errorConditionFormula>
        <errorMessage>High-Level Authorizer is required to this form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Invalid_ChangeAuthorizer</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_CN_Change_Authorizer__c  =  OwnerId</errorConditionFormula>
        <errorMessage>Change Authorizer cannot be the same as the Applicant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Owner_Approver_Duplicate</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_eForm_Change_Authorizer__c =  OwnerId )</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Change_Authorizer__c</errorDisplayField>
        <errorMessage>Approver and Owner cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Ticket_No_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( ASI_eForm_Change_Type__c , &quot;Emergency&quot;), ISBLANK( ASI_eForm_Problem_Ticket_No__c ))</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Problem_Ticket_No__c</errorDisplayField>
        <errorMessage>If Emergency, please indicate the problem ticket no.</errorMessage>
    </validationRules>
</CustomObject>